--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "axios": "^1.2.0",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.2",
     "next": "10.0.9",
-    "nodemailer": "^6.5.0",
+    "nodemailer": "^6.8.0",
+    "nodemailer-express-handlebars": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
